--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="Text">Status: -</string>
     <string name="on">Turn On</string>
     <string name="off">Turn Off</string>
-    <string name="List">List paired Devices</string>
+    <string name="List">Pair with Fiddle</string>
     <string name="Find">Search new Devices / Cancel</string>
 </resources>
